site too narrow, fix small images later

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -47,7 +47,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 1200px;
   padding: 0 10px;
   width: 100%;
 }
